# tugas-praktikum-3-sourcecode-faris

./: README.md
Alat Kalibrasi/: main.cpp
Automated Sorting/: main.cpp
Choma Key/: main.cpp
Color Replacement/: CMakeLists.txt  main.cpp
Deteksi Objek Merah/: main.cpp
Konversi Ruang Warna Dasar/: CMakeLists.txt  main.cpp
Privacy Protection/: main.cpp
Real-Time Color Space Explorer/: main.cpp
Skin Detection/: CMakeLists.txt  main3.cpp
Splitting/: CMakeLists.txt  main2.cpp
Virtual Invisibility Cloak/: main.cpp
